updated to match java ver in pom.xml
chged List.of to Arrays.asList
chged isBlank() to trim().isEmpty()